src/styles.scss
@use '~@angular/material' as mat;

@include mat.core();
@import "~@angular/material/prebuilt-themes/indigo-pink.css";
@import 'theme-fem-readup-red';

.fem-read-red-theme {
  @include mat.all-component-themes($fem-readup-red-theme);
}

@font-face {
  font-family: "Rubik Moonrocks";
  src: url(assets/fonts/RubikMoonrocks-Regular.ttf) format("truetype");
}

html {
  height: 100%;
  overflow: scroll;
  overflow-x: hidden;
}

::-webkit-scrollbar {
  width: 0; /* remove scrollbar space */
  height: 0; /* remove scrollbar space */
  background: transparent; /* optional: just make scrollbar invisible */
}

body {
  height: 100%;
  background: #fafafa;
  color: mat.get-color-from-palette(mat.$grey-palette, 900);
  font-family: 'Centra Book', sans-serif;
  margin: 0;

  display: flex;
  flex-direction: column;
}

::ng-deep .mat-card {
  background: white;
  box-shadow: 0 2px 1px -1px #0003, 0 1px 1px 0 #00000024, 0 1px 3px 0 #0000001f;
}

::ng-deep .mat-toolbar-single-row {
  padding: 0 !important;
}

::ng-deep .mat-button {
  min-width: 0 !important;
}

